# vendor_flamingo

interfaces/power/default/: Android.bp
interfaces/qcom/: Android.bp
overlay/: overlays.mk
overlay/FrameworksOverlay/: Android.bp  AndroidManifest.xml
overlay/FrameworksOverlay/res/drawable/: ic_doc_folder.xml  stat_notify_missed_call.xml
overlay/FrameworksOverlay/res/values/: color_device_defaults.xml  config.xml
overlay/ImmersiveNavigationOverlay/: AndroidManifest.xml
overlay/LatinIMEOverlay/: Android.bp  AndroidManifest.xml
overlay/RepainterServicePrivOverlay/: Android.bp  AndroidManifest.xml
overlay/SettingsOverlay/: Android.bp  AndroidManifest.xml
overlay/SettingsProviderOverlay/: AndroidManifest.xml
overlay/SimpleDeviceConfigOverlay/: Android.bp  AndroidManifest.xml
overlay/SystemUIOverlay/: Android.bp  AndroidManifest.xml
overlay/ThemePickerOverlay/: Android.bp  AndroidManifest.xml
overlay/VanillaFrameworksOverlay/: Android.bp  AndroidManifest.xml
overlay/VanillaSettingsOverlay/: Android.bp  AndroidManifest.xml
prebuilts/SystemUIPermissions/: Android.bp  com.android.systemui.xml
prebuilts/permissions/: Android.bp  com.android.settings.xml
scripts/: generate_caf_manifest.main.kts  merge-caf.py  merge-manifest.sh  roomservice.py
scripts/manifest_merger/: .gitignore  Cargo.toml
scripts/manifest_merger/src/: errors.rs  git.rs  macros.rs  main.rs  manifest.rs  merge.rs
scripts/roomservice/: .gitignore  Cargo.toml
scripts/roomservice/src/: dependency.rs  main.rs  manifest.rs  remotes.rs
soong/: Android.bp
(+12 files in other folders)
