[package]
name = "manifest_merger"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.0.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3.24"
reqwest = "0.11.12"
xmltree = { version = "0.10.3", features = ["attribute-order"] }
threadpool = "1.8.1"
git2 = "0.14"
regex = "1.6.0"
clap = { version = "4.0.15", features = ["derive"] }
num_cpus = "1.13.1"
